# bcfdelta

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  decode.hpp  encode.hpp  encode_delta.hpp  encode_split.hpp  main.cpp  misc.hpp  shared.hpp
